--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,5 +1,5 @@
 .feynman {
-  height: 890px;
+  min-height: 890px;
   background-color: hsl(0, 0%, 95%);
   background-image: url(../../images/feynman.png);
   background-position: 0% 100%;
