--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,10 +1,10 @@
 .header__title {
   width: 730px;
-  margin-left: 64px;
+  margin: 0 0 0 64px;
   display: flex;
   align-self: center;
   line-height: 96px;
   font-size: 102px;
-  font-weight: bolder;
+  font-weight: bold;
   z-index: 3;
 }
