--- a/blocks/logo/_place/logo_place_header.css
+++ b/blocks/logo/_place/logo_place_header.css
@@ -1,6 +1,6 @@
 .logo_place_header {
-  margin-top: 30px;
-  margin-left: 64px;
+  top: 30px;
+  left: 64px;
   position: absolute;
   z-index: 4;
 }
