--- a/blocks/resources/__link/resources__link.css
+++ b/blocks/resources/__link/resources__link.css
@@ -1,4 +1,8 @@
 .resources__link {
   text-decoration: none;
-  margin: 0;
+  transition: opacity 0.2s;
+}
+
+.resources__link:hover {
+  opacity: 0.7;
 }
