--- a/blocks/kaufman/__triangle/kaufman__triange.css
+++ b/blocks/kaufman/__triangle/kaufman__triange.css
@@ -1,5 +1,9 @@
 .kaufman__triangle {
-  position: absolute;
   z-index: 1;
+  position: absolute;
+  background-image: url(../../../images/kaufman-triangle.svg);
+  background-size: contain;
+  width: 877px;
+  height: 877px;
   right: -210px;
 }
